force-app/main/default/objects/FLAGS__Aging__c/FLAGS__Aging__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store custom aging settings and logic.</description>
    <label>Case Flags Aging</label>
</CustomObject>