force-app/main/default/objects/FLAGS__Aging__c/fields/FLAGS__Active__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this Custom Aging rule should be evaluated when cases are created or updated.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>