force-app/main/default/objects/FLAGS__Aging__c/fields/FLAGS__Age1Hours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Age1Hours__c</fullName>
    <description>The number of hours after the Case Flag Date/Time when Flag 1 will be displayed.</description>
    <label>Age 1 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>