force-app/main/default/objects/FLAGS__Aging__c/fields/FLAGS__Age1Notifications__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Age1Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age 1 Notifications</label>
    <type>Checkbox</type>
</CustomField>