force-app/main/default/objects/FLAGS__Aging__c/fields/FLAGS__Age2Description__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Age2Description__c</fullName>
    <label>Age 2 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>