force-app/main/default/objects/FLAGS__Aging__c/fields/FLAGS__Follow_Up_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Follow_Up_Process_Id__c</fullName>
    <description>Follow Up Process Id used to map</description>
    <label>Follow Up Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>