force-app/main/default/objects/FLAGS__Aging__c/fields/FLAGS__Order__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Order__c</fullName>
    <description>Custom Aging evaluation order of precedence</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>